phase2_Dev/src/objects/HistoricalDocumentsMetadataStaging__c.object
<CustomObject>
    <description>This object will be used as staging for converting metadata for historical documents into S3_file records related to appropriate cases, visits or investigations.</description>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeID__c</fullName>
        <label>IntakeID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionId__c</fullName>
        <label>InteractionId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RID__c</fullName>
        <label>RID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>SourceField</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTableRecordId__c</fullName>
        <label>SourceTableRecordId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTable__c</fullName>
        <label>SourceTable</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>HistoricalDocumentsMetadataStaging</label>
    <nameField>
        <label>HistoricalDocumentsMetadataStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HistoricalDocumentsMetadataStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>